Workaround to open non-public members
com.nulabinc.backlog4j.http.BacklogHttpClientImpl.setRequestMethodUsingWorkaroundForJREBug